Engine correctness fixes (combining-algorithm Kleene semantics, grammar, arithmetic, numeric literals) plus security/robustness hardening                  (#245)
* correctness & security hardening across the engine (function libs, attribute broker, PEP, config, LSP)

* fix sonar issues

* completing Spring PEP wiring, more hardening.

* fix attribute pump

* Update build_native_lsp.yml

* start aligning stratified voting with kleene logic

* rewire index for kleene logic

* work on index

* work in index

* complete index work

* Update ActivePolicyInformationPointInvocationPumpTests.java

* extend Mongo Shim

* fix sonar issues

* fix sonar issues

* relax timing requirements in ITs

* fix sonar issues

* fix sonar issues

* fix code review finds

* fix spring code review issues

* code review fixes

* harden secrets handling for MQTT and Traccar PIP

* fix keyword escaping confision with XOR, guard arithmetic operators, fixed docs

* fix out of order delivery risk on component hot-swap

* cleanup benchmark output

* add pdpId to attribute invocation

* unify client failure patterns

* cleanup comments

* fix regression

* Update TransitionSignals.java

* code review fixes

* more code review robustness fixes

* guard canonical index against blow-up

* harden libraries

* harden filtering

* fix mqtt regression, sonar issues

* minor style cleanup

* cleanup and harden blacken

* fix ITs

* fix sonar issues

* code review fixes and sonar

* more codereview hardening

* fix sonar

* code review changes

* basic redesign of hotswapping of plugins

* relax  locking in voter source

* harden hot-swap

* tighten compile time validation of target expressions

* fix resource leak

* cleanup

* hardening

* fix sonar issues

* More core review results and comments cleanup

* node SSE token expity handling

* align with rsocket

* tighten marshalling

* fix HTTP error code

* harden node SSE

* Harden node SSE

* harden SSE

* Harden RSocked codec.

* harden signature lib a