@@ -20,9 +20,14 @@ package io.sapl.node.http.pdp;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.timeout;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
 import java.io.ByteArrayInputStream;
@@ -30,14 +35,26 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.Writer;
 import java.time.Duration;
+import java.time.Instant;
+import java.util.List;
+import java.util.concurrent.AbstractExecutorService;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentLinkedQueue;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.ScheduledFuture;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.mock.web.DelegatingServletInputStream;
@@ -90,7 +107,7 @@ class SseStreamServletTests {
 
             @Override
             protected Stream<AuthorizationDecision> openStream(AuthorizationSubscription subscription, String pdpId) {
-                // Never reached: the pump is rejected before it runs.
+                // never reached, the pump is rejected before it runs
                 return null;
             }
 
@@ -104,7 +121,7 @@ class SseStreamServletTests {
     @Test
     @DisplayName("when the pump executor rejects the task the async context is completed and unregistered, not leaked")
     void whenPumpRejectedThenAsyncContextCompletedAndUnregistered() throws Exception {
-        when(authHandler.authenticate(any())).thenReturn(new HttpAuthResult("default"));
+        when(authHandler.authenticate(any())).thenReturn(new HttpAuthResult("default", null));
         val body = "{\"subject\":\"u\",\"action\":\"r\",\"resource\":\"d\"}".getBytes(UTF_8);
         when(request.getInputStream()).thenReturn(new DelegatingServletInputStream(new ByteArrayInputStream(body)));
         when(request.startAsync()).thenReturn(asyncContext);
@@ -112,8 +129,111 @@ class SseStreamServletTests {
 
         servlet().handlePost(request, new MockHttpServletResponse());
 
-        verify(connectionRegistry).unregister(asyncContext);
+        verify(connectionRegistry).unregister(any(SseConnection.class));
         verify(asyncContext).complete();
+    }
+
+    @Test
+    @DisplayName("an SSE stream authenticated with a JWT is scheduled to close at the token's expiry")
+    void whenJwtExpiryThenConnectionScheduledToCloseAtExpiry() throws Exception {
+        when(authHandler.authenticate(any())).thenReturn(new HttpAuthResult("default", Instant.now().plusSeconds(300)));
+        val body = "{\"subject\":\"u\",\"action\":\"r\",\"resource\":\"d\"}".getBytes(UTF_8);
+        when(request.getInputStream()).thenReturn(new DelegatingServletInputStream(new ByteArrayInputStream(body)));
+        when(request.startAsync()).thenReturn(asyncContext);
+        when(keepAliveScheduler.schedule(any(Runnable.class), anyLong(), any(TimeUnit.class)))
+                .thenReturn(mock(ScheduledFuture.class));
+        val expiryTask = ArgumentCaptor.forClass(Runnable.class);
+        val delay      = ArgumentCaptor.forClass(Long.class);
+
+        servlet().handlePost(request, new MockHttpServletResponse());
+
+        verify(keepAliveScheduler).schedule(expiryTask.capture(), delay.capture(), eq(TimeUnit.MILLISECONDS));
+        assertThat(delay.getValue()).isBetween(290_000L, 300_000L);
+
+        expiryTask.getValue().run();
+        verify(connectionRegistry).unregister(any(SseConnection.class));
+        verify(asyncContext).complete();
+    }
+
+    @Test
+    @DisplayName("a non-expiring credential (basic auth or api key) schedules no expiry close")
+    void whenNoTokenExpiryThenNoExpiryScheduled() throws Exception {
+        when(authHandler.authenticate(any())).thenReturn(new HttpAuthResult("default", null));
+        val body = "{\"subject\":\"u\",\"action\":\"r\",\"resource\":\"d\"}".getBytes(UTF_8);
+        when(request.getInputStream()).thenReturn(new DelegatingServletInputStream(new ByteArrayInputStream(body)));
+        when(request.startAsync()).thenReturn(asyncContext);
+
+        servlet().handlePost(request, new MockHttpServletResponse());
+
+        verify(keepAliveScheduler, never()).schedule(any(Runnable.class), anyLong(), any(TimeUnit.class));
+    }
+
+    @Test
+    @DisplayName("at the JWT expiry the upstream stream is closed and the response completed, so delivery stops")
+    void whenJwtExpiresThenStreamClosedAndConnectionCompleted() throws Exception {
+        val scheduler    = Executors.newSingleThreadScheduledExecutor(r -> {
+                             val t = new Thread(r, "sapl-test-expiry");
+                             t.setDaemon(true);
+                             return t;
+                         });
+        val pump         = Executors.newVirtualThreadPerTaskExecutor();
+        val stream       = new LatestSlotStream<AuthorizationDecision>(); // never fed, pump parks in awaitNext()
+        val streamClosed = new CountDownLatch(1);
+        stream.onClose(streamClosed::countDown);
+        try (stream) {
+            val response = mock(HttpServletResponse.class);
+            // the writer is fetched lazily on the first frame write, which may not happen
+            // here
+            lenient().when(response.getWriter()).thenReturn(new PrintWriter(Writer.nullWriter()));
+            when(asyncContext.getResponse()).thenReturn(response);
+            // exp 300ms out, keep-alive 30s, so only the expiry timer closes the stream in
+            // the await window
+            when(authHandler.authenticate(any()))
+                    .thenReturn(new HttpAuthResult("default", Instant.now().plusMillis(300)));
+            val body = "{\"subject\":\"u\",\"action\":\"r\",\"resource\":\"d\"}".getBytes(UTF_8);
+            when(request.getInputStream()).thenReturn(new DelegatingServletInputStream(new ByteArrayInputStream(body)));
+            when(request.startAsync()).thenReturn(asyncContext);
+
+            val servlet = new SseStreamServlet<AuthorizationSubscription, AuthorizationDecision>(authHandler, mapper,
+                    Duration.ofSeconds(30), scheduler, pump, connectionRegistry) {
+                @Override
+                protected Class<AuthorizationSubscription> subscriptionType() {
+                    return AuthorizationSubscription.class;
+                }
+
+                @Override
+                protected Stream<AuthorizationDecision> openStream(AuthorizationSubscription subscription,
+                        String pdpId) {
+                    return stream;
+                }
+
+                @Override
+                protected AuthorizationDecision indeterminate() {
+                    return AuthorizationDecision.INDETERMINATE;
+                }
+            };
+
+            servlet.handlePost(request, response);
+
+            assertThat(streamClosed.await(10, TimeUnit.SECONDS)).isTrue();
+            verify(asyncContext, timeout(10_000)).complete();
+        } finally {
+            scheduler.shutdownNow();
+            pump.shutdownNow();
+        }
+    }
+
+    @Test
+    @DisplayName("a chunked over-limit body is rejected with 413 before the stream is opened")
+    void whenBodyExceedsLimitThenContentTooLargeAndNoStreamOpened() throws Exception {
+        when(authHandler.authenticate(any())).thenReturn(new HttpAuthResult("default", null));
+        when(request.getInputStream()).thenReturn(new TooLargeInputStream());
+        val response = new MockHttpServletResponse();
+
+        servlet().handlePost(request, response);
+
+        assertThat(response.getStatus()).isEqualTo(HttpServletResponse.SC_REQUEST_ENTITY_TOO_LARGE);
+        verifyNoInteractions(pumpExecutor, connectionRegistry);
     }
 
     @Test
@@ -130,32 +250,40 @@ class SseStreamServletTests {
     }
 
     @Test
-    @DisplayName("a client that died without closing is detected via the keep-alive write failure: the stream is closed and the async context completed and unregistered")
-    void whenKeepAliveWriteFailsThenStreamClosedAndAsyncContextReclaimed() throws Exception {
-        val scheduler = Executors.newSingleThreadScheduledExecutor();
-        val pump      = Executors.newVirtualThreadPerTaskExecutor();
-        val stream    = new LatestSlotStream<AuthorizationDecision>(); // never fed: pump parks in awaitNext()
+    @DisplayName("the keep-alive frame is flushed on the per-connection pump thread, not the bounded scheduler thread")
+    void whenKeepAliveFiresThenWriteRunsOffTheScheduler() throws Exception {
+        val schedulerThreadName = "sapl-test-keepalive";
+        val scheduler           = Executors.newSingleThreadScheduledExecutor(r -> {
+                                    val t = new Thread(r, schedulerThreadName);
+                                    t.setDaemon(true);
+                                    return t;
+                                });
+        val pump                = Executors.newVirtualThreadPerTaskExecutor();
+        val stream              = new LatestSlotStream<AuthorizationDecision>(); // never fed, pump parks in awaitNext()
+        val writeThreadName     = new AtomicReference<String>();
+        val keepAliveWritten    = new CountDownLatch(1);
         try {
-            val brokenPipe = new PrintWriter(new Writer() {
-                               @Override
-                               public void write(char[] cbuf, int off, int len) throws IOException {
-                                   throw new IOException("broken pipe");
-                               }
+            val recordingWriter = new PrintWriter(new Writer() {
+                                    @Override
+                                    public void write(char[] cbuf, int off, int len) {
+                                        writeThreadName.compareAndSet(null, Thread.currentThread().getName());
+                                        keepAliveWritten.countDown();
+                                    }
 
-                               @Override
-                               public void flush() throws IOException {
-                                   throw new IOException("broken pipe");
-                               }
+                                    @Override
+                                    public void flush() {
+                                        // no-op
+                                    }
 
-                               @Override
-                               public void close() {
-                                   // no-op
-                               }
-                           });
-            val response   = mock(HttpServletResponse.class);
-            when(response.getWriter()).thenReturn(brokenPipe);
+                                    @Override
+                                    public void close() {
+                                        // no-op
+                                    }
+                                });
+            val response        = mock(HttpServletResponse.class);
+            when(response.getWriter()).thenReturn(recordingWriter);
             when(asyncContext.getResponse()).thenReturn(response);
-            when(authHandler.authenticate(any())).thenReturn(new HttpAuthResult("default"));
+            when(authHandler.authenticate(any())).thenReturn(new HttpAuthResult("default", null));
             val body = "{\"subject\":\"u\",\"action\":\"r\",\"resource\":\"d\"}".getBytes(UTF_8);
             when(request.getInputStream()).thenReturn(new DelegatingServletInputStream(new ByteArrayInputStream(body)));
             when(request.startAsync()).thenReturn(asyncContext);
@@ -181,7 +309,178 @@ class SseStreamServletTests {
 
             servlet.handlePost(request, response);
 
-            verify(connectionRegistry, timeout(10000)).unregister(asyncContext);
+            assertThat(keepAliveWritten.await(10, TimeUnit.SECONDS)).isTrue();
+            assertThat(writeThreadName.get()).isNotNull().isNotEqualTo(schedulerThreadName);
+        } finally {
+            stream.close();
+            scheduler.shutdownNow();
+            pump.shutdownNow();
+        }
+    }
+
+    @Test
+    @DisplayName("a keep-alive dispatched during teardown does not write to the closed writer after the stream has ended")
+    void whenKeepAliveDispatchedDuringTeardownThenItDoesNotWriteToClosedWriter() throws Exception {
+        val writerClosed       = new AtomicBoolean(false);
+        val wroteAfterClose    = new AtomicBoolean(false);
+        val deferredKeepAlives = new ConcurrentLinkedQueue<Runnable>();
+
+        // submit runs synchronously. Execute defers keep-alives until after teardown.
+        val deferringPump = new AbstractExecutorService() {
+            @Override
+            public void execute(Runnable command) {
+                deferredKeepAlives.add(command);
+            }
+
+            @Override
+            public Future<?> submit(Runnable task) {
+                task.run();
+                return CompletableFuture.completedFuture(null);
+            }
+
+            @Override
+            public void shutdown() {
+                // no-op
+            }
+
+            @Override
+            public List<Runnable> shutdownNow() {
+                return List.of();
+            }
+
+            @Override
+            public boolean isShutdown() {
+                return false;
+            }
+
+            @Override
+            public boolean isTerminated() {
+                return false;
+            }
+
+            @Override
+            public boolean awaitTermination(long timeout, TimeUnit unit) {
+                return true;
+            }
+        };
+
+        // Run the keep-alive once, synchronously, at schedule time.
+        when(keepAliveScheduler.scheduleAtFixedRate(any(Runnable.class), anyLong(), anyLong(), any()))
+                .thenAnswer(invocation -> {
+                    invocation.<Runnable>getArgument(0).run();
+                    return mock(ScheduledFuture.class);
+                });
+
+        val recordingWriter = new PrintWriter(new Writer() {
+                                @Override
+                                public void write(char[] cbuf, int off, int len) {
+                                    if (writerClosed.get()) {
+                                        wroteAfterClose.set(true);
+                                    }
+                                }
+
+                                @Override
+                                public void flush() {
+                                    // no-op
+                                }
+
+                                @Override
+                                public void close() {
+                                    writerClosed.set(true);
+                                }
+                            });
+        val response        = mock(HttpServletResponse.class);
+        when(response.getWriter()).thenReturn(recordingWriter);
+        when(asyncContext.getResponse()).thenReturn(response);
+        when(authHandler.authenticate(any())).thenReturn(new HttpAuthResult("default", null));
+        val body = "{\"subject\":\"u\",\"action\":\"r\",\"resource\":\"d\"}".getBytes(UTF_8);
+        when(request.getInputStream()).thenReturn(new DelegatingServletInputStream(new ByteArrayInputStream(body)));
+        when(request.startAsync()).thenReturn(asyncContext);
+
+        // Stream ends immediately so the pump exits and teardown closes the writer.
+        val endedStream = new LatestSlotStream<AuthorizationDecision>();
+        endedStream.close();
+
+        val servlet = new SseStreamServlet<AuthorizationSubscription, AuthorizationDecision>(authHandler, mapper,
+                Duration.ofSeconds(1), keepAliveScheduler, deferringPump, connectionRegistry) {
+            @Override
+            protected Class<AuthorizationSubscription> subscriptionType() {
+                return AuthorizationSubscription.class;
+            }
+
+            @Override
+            protected Stream<AuthorizationDecision> openStream(AuthorizationSubscription subscription, String pdpId) {
+                return endedStream;
+            }
+
+            @Override
+            protected AuthorizationDecision indeterminate() {
+                return AuthorizationDecision.INDETERMINATE;
+            }
+        };
+
+        servlet.handlePost(request, response);
+
+        assertThat(writerClosed).isTrue();
+        deferredKeepAlives.forEach(Runnable::run);
+
+        assertThat(wroteAfterClose).as("late keep-alive must not write to the closed writer").isFalse();
+        verify(asyncContext).complete();
+    }
+
+    @Test
+    @DisplayName("a client that died without closing is detected via the keep-alive write failure: the stream is closed and the async context completed and unregistered")
+    void whenKeepAliveWriteFailsThenStreamClosedAndAsyncContextReclaimed() throws Exception {
+        val scheduler = Executors.newSingleThreadScheduledExecutor();
+        val pump      = Executors.newVirtualThreadPerTaskExecutor();
+        val stream    = new LatestSlotStream<AuthorizationDecision>(); // never fed, pump parks in awaitNext()
+        try {
+            val brokenPipe = new PrintWriter(new Writer() {
+                               @Override
+                               public void write(char[] cbuf, int off, int len) throws IOException {
+                                   throw new IOException("broken pipe");
+                               }
+
+                               @Override
+                               public void flush() throws IOException {
+                                   throw new IOException("broken pipe");
+                               }
+
+                               @Override
+                               public void close() {
+                                   // no-op
+                               }
+                           });
+            val response   = mock(HttpServletResponse.class);
+            when(response.getWriter()).thenReturn(brokenPipe);
+            when(asyncContext.getResponse()).thenReturn(response);
+            when(authHandler.authenticate(any())).thenReturn(new HttpAuthResult("default", null));
+            val body = "{\"subject\":\"u\",\"action\":\"r\",\"resource\":\"d\"}".getBytes(UTF_8);
+            when(request.getInputStream()).thenReturn(new DelegatingServletInputStream(new ByteArrayInputStream(body)));
+            when(request.startAsync()).thenReturn(asyncContext);
+
+            val servlet = new SseStreamServlet<AuthorizationSubscription, AuthorizationDecision>(authHandler, mapper,
+                    Duration.ofSeconds(1), scheduler, pump, connectionRegistry) {
+                @Override
+                protected Class<AuthorizationSubscription> subscriptionType() {
+                    return AuthorizationSubscription.class;
+                }
+
+                @Override
+                protected Stream<AuthorizationDecision> openStream(AuthorizationSubscription subscription,
+                        String pdpId) {
+                    return stream;
+                }
+
+                @Override
+                protected AuthorizationDecision indeterminate() {
+                    return AuthorizationDecision.INDETERMINATE;
+                }
+            };
+
+            servlet.handlePost(request, response);
+
+            verify(connectionRegistry, timeout(10000)).unregister(any(SseConnection.class));
             verify(asyncContext, timeout(10000)).complete();
         } finally {
             scheduler.shutdownNow();
